[package]
authors = ["Davide Di Carlo <daddinuz@gmail.com>"]
description = "Association list offering fast lookups while preserving insertion order"
name = "alist"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["collections", "alist", "hash", "association", "map"]
rust-version = "1.71.1"
repository = "https://github.com/daddinuz/alist"

[dependencies]
