[package]
name = "alist"
version = "0.2.0"
authors = ["Davide Di Carlo <daddinuz@gmail.com>"]
edition = "2024"
rust-version = "1.86"
description = "Small insertion-ordered association list for keys with cheap equality"
documentation = "https://docs.rs/alist"
readme = "README.md"
repository = "https://github.com/daddinuz/alist"
license = "MIT"
keywords = ["collections", "alist", "association", "map", "no-std"]
categories = ["data-structures", "no-std"]

[profile.release]
codegen-units = 1
lto = "fat"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "benchmark"
harness = false
